--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -14,7 +14,7 @@
     "likes": "0 personnes ❤️ça pour le moment 😕 | {n} personne ❤️ça | {n} personnes ❤️ça"
   },
   "about": {
-    "title": "About Us",
+    "title": "Qui Sommes-Nous",
     "para1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt nobis sapiente quos officia vitae. Minus blanditiis doloremque error at consectetur magni nam voluptatem pariatur! Itaque deleniti delectus odio accusantium quas?",
     "para2": "Non eius beatae dolorum impedit enim repudiandae nulla ipsum animi. Ullam qui libero possimus aliquam, praesentium ipsam omnis, ab aut culpa reprehenderit odio sapiente ex molestias maiores? Temporibus, molestiae eum!",
     "para3": "Consectetur illo nobis, nemo necessitatibus quos corporis voluptates enim totam itaque ratione et ad iste corrupti eaque ex quas commodi. Perspiciatis vel quo consectetur quas nulla explicabo harum ratione consequatur."
